# SERA

./: .coverage  .gitignore  .gitlab-ci.yml  ETHICS.md  README.md  backend_bridge.spec  coverage.xml  junit.xml  neighbor_mapping.json  province_code_audit.csv  pyproject.toml  requirements.txt  test_labor_flow.py  test_output.txt  twin_models.joblib  twin_models_full.joblib
.github/workflows/: release.yml  tests.yml
InitialReport/: ProjectTassinari.tex
data/: learned_couplings.json
data/cache/: 139_176_2001_2025.csv  22_289_DF_DCIS_POPRES1_1_2001_2025.csv  25_74_2001_2025.csv  26_29_DF_DCIS_DECESSI_1_2001_2025.csv  28_185_DF_DCIS_MIGRAZIONI_1_2001_2025.csv  32_221_DF_DCCV_GINIREDD_1_2001_2025.csv  34_727_DF_DCCV_POVERTA_1_2001_2025.csv  93_1095_DF_DCCN_ISTITUZ_TNA1_1_2001_2025.csv  93_1227_DF_DCCN_TNA1_6_2001_2025.csv
data/scenarios/: last_available_year_allocations.csv  scenario_baseline_2026_2028.csv  scenario_variant_2026_2028.csv
docs/: DATASHEET.md  MODEL_CARD.md  TWIN_STRUCTURE_ANALYSIS.md  twin_structure_findings.json
report/: FinalReport_SERA.aux  FinalReport_SERA.fdb_latexmk  FinalReport_SERA.fls  FinalReport_SERA.out  FinalReport_SERA.tex  FinalReport_SERA.toc  plot_results.py  results_macros.tex  run_ablation.py  run_experiments.py  run_prioritarian_sweep.py  run_sufficientarian_sweep.py  run_transparency.py
report/results/: ablation.json  compare_objectives.json  pareto_front.json  pareto_front_clustered.json  prioritarian_sweep.json  provenance.json  run_log.txt  sufficientarian_sweep.json  transparency.json
src/sera/: __init__.py  config.py  downloader.py  istat_client.py
tests/: test_bridge_budget.py  test_budget.py  test_explain.py  test_istat_client.py  test_macroarea.py  test_objectives.py  test_panel_estimation.py  test_pareto.py  test_policy.py  test_provenance.py  test_province_mapping.py  test_twin.py  test_utils.py
tools/ad_hoc/: check_compare_objectives.py  check_explainable_policies.py  check_income_codes.py  check_missing_provinces.py  check_nans.py  check_next_batch.py  check_next_indicators.py  check_optimize_candidates.py  check_targeting_tradeoffs.py  check_unemployment_data.py  (+16 more)
ui/: backend_bridge.py  index.html  main.js  package-lock.json  package.json  preload.js  renderer.js  styles.css
(+307 files in other folders)
